Change format for every file